--- a/cart.ui
+++ b/cart.ui
@@ -311,7 +311,7 @@ QWidget {background-color: white}
          </widget>
         </item>
         <item row="16" column="0" colspan="2">
-         <widget class="QPushButton" name="addToCartButton">
+         <widget class="QPushButton" name="removeCartButton">
           <property name="focusPolicy">
            <enum>Qt::NoFocus</enum>
           </property>
