--- a/projectsBrowser.ui
+++ b/projectsBrowser.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>editUsersWindow</class>
- <widget class="QWidget" name="editUsersWindow">
+ <class>projectsBrowserWindow</class>
+ <widget class="QWidget" name="projectsBrowserWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -263,7 +263,7 @@ QWidget {background-color: white}
     </layout>
    </item>
    <item row="1" column="1">
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="status">
      <property name="text">
       <string/>
      </property>
