--- a/projectsBrowser.ui
+++ b/projectsBrowser.ui
@@ -53,32 +53,6 @@ QWidget {background-color: white}
    </item>
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="1" colspan="4" alignment="Qt::AlignHCenter">
-      <widget class="QLabel" name="label">
-       <property name="styleSheet">
-        <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
-       </property>
-       <property name="text">
-        <string>Projects List</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1" rowspan="2" colspan="2">
-      <widget class="QListView" name="userView">
-       <property name="minimumSize">
-        <size>
-         <width>350</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="editTriggers">
-        <set>QAbstractItemView::NoEditTriggers</set>
-       </property>
-       <property name="alternatingRowColors">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
       <spacer name="horizontalSpacer_4">
        <property name="orientation">
@@ -92,18 +66,15 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="2" column="1" colspan="4">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
+     <item row="1" column="1" colspan="4" alignment="Qt::AlignHCenter">
+      <widget class="QLabel" name="label">
+       <property name="styleSheet">
+        <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
+       <property name="text">
+        <string>Projects List</string>
        </property>
-      </spacer>
+      </widget>
      </item>
      <item row="3" column="3" colspan="2">
       <layout class="QGridLayout" name="gridLayout_2">
@@ -156,7 +127,7 @@ QWidget {background-color: white}
          </property>
          <property name="font">
           <font>
-           <pointsize>10</pointsize>
+           <pointsize>8</pointsize>
           </font>
          </property>
         </widget>
@@ -227,7 +198,7 @@ QWidget {background-color: white}
           <widget class="QLabel" name="label_3">
            <property name="font">
             <font>
-             <pointsize>10</pointsize>
+             <pointsize>8</pointsize>
             </font>
            </property>
            <property name="text">
@@ -280,12 +251,47 @@ QWidget {background-color: white}
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
        </property>
+       <property name="contextMenuPolicy">
+        <enum>Qt::NoContextMenu</enum>
+       </property>
        <property name="text">
         <string/>
        </property>
        <property name="icon">
         <iconset>
          <normaloff>images/usernew.png</normaloff>images/usernew.png</iconset>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" colspan="4">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="3" column="1" rowspan="2" colspan="2">
+      <widget class="QListView" name="userView">
+       <property name="minimumSize">
+        <size>
+         <width>350</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
