--- a/projectsBrowser.ui
+++ b/projectsBrowser.ui
@@ -66,7 +66,7 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="1" column="1" colspan="4" alignment="Qt::AlignHCenter">
+     <item row="1" column="1" colspan="5" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="label">
        <property name="styleSheet">
         <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
@@ -76,7 +76,7 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="3" column="3" colspan="2">
+     <item row="3" column="4" colspan="2">
       <layout class="QGridLayout" name="gridLayout_2">
        <property name="sizeConstraint">
         <enum>QLayout::SetFixedSize</enum>
@@ -246,7 +246,7 @@ QWidget {background-color: white}
        </item>
       </layout>
      </item>
-     <item row="3" column="5">
+     <item row="3" column="6">
       <widget class="QPushButton" name="pushButton">
        <property name="focusPolicy">
         <enum>Qt::NoFocus</enum>
@@ -266,7 +266,7 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="2" column="1" colspan="4">
+     <item row="2" column="1" colspan="5">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -294,6 +294,19 @@ QWidget {background-color: white}
         <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="3" column="3">
+      <spacer name="horizontalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
