--- a/projectsBrowser.ui
+++ b/projectsBrowser.ui
@@ -142,12 +142,18 @@ QWidget {background-color: white}
           <bool>false</bool>
          </property>
          <property name="text">
-          <string>Delete Project</string>
+          <string>Delete</string>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
         <widget class="QPushButton" name="saveButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="focusPolicy">
           <enum>Qt::NoFocus</enum>
          </property>
@@ -178,7 +184,7 @@ QWidget {background-color: white}
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
-          <string>Add Items</string>
+          <string>Inventory</string>
          </property>
         </widget>
        </item>
