edited project browser ui

--- a/projectsBrowser.ui
+++ b/projectsBrowser.ui
@@ -74,7 +74,7 @@ QWidget {background-color: white}
      </property>
     </spacer>
    </item>
-   <item row="1" column="2">
+   <item row="1" column="3">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -240,7 +240,16 @@ QWidget {background-color: white}
        <item row="3" column="1">
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="QLineEdit" name="leader"/>
+          <widget class="QLabel" name="lead">
+           <property name="font">
+            <font>
+             <pointsize>8</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -332,10 +341,30 @@ QWidget {background-color: white}
       <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
      </property>
      <property name="text">
-      <string>Projects List</string>
+      <string>      Projects List</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="changeLeadUser">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::NoContextMenu</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>images/usernew.png</normaloff>images/usernew.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
