edited project browser ui

--- a/userList.ui
+++ b/userList.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>projectsBrowserWindow</class>
- <widget class="QWidget" name="projectsBrowserWindow">
+ <class>userList</class>
+ <widget class="QWidget" name="userList">
   <property name="geometry">
    <rect>
     <x>0</x>
