--- a/inventory_editor.ui
+++ b/inventory_editor.ui
@@ -20,6 +20,19 @@ QWidget {background-color: white}
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
+    <item row="0" column="0">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>107</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="2" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
@@ -50,20 +63,7 @@ QWidget {background-color: white}
       </item>
      </layout>
     </item>
-    <item row="0" column="0">
-     <spacer name="horizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>107</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="2">
+    <item row="0" column="3">
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -89,6 +89,67 @@ QWidget {background-color: white}
     <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="4" column="3">
+       <widget class="QLineEdit" name="partCategory"/>
+      </item>
+      <item row="3" column="3">
+       <widget class="QLineEdit" name="partName"/>
+      </item>
+      <item row="1" column="0" colspan="4">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="5" column="2">
+       <spacer name="horizontalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="0" colspan="4" alignment="Qt::AlignHCenter">
+       <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Inventory Editor</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" rowspan="3">
+       <widget class="QListView" name="categoryView">
+        <property name="minimumSize">
+         <size>
+          <width>350</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="3">
        <layout class="QGridLayout" name="gridLayout">
         <property name="leftMargin">
          <number>0</number>
@@ -102,8 +163,35 @@ QWidget {background-color: white}
         <property name="verticalSpacing">
          <number>6</number>
         </property>
-        <item row="4" column="1">
-         <widget class="QLabel" name="partShelf">
+        <item row="9" column="0" colspan="2">
+         <layout class="QHBoxLayout" name="horizontalLayout_9">
+          <item>
+           <widget class="QPushButton" name="Delete">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
+            <property name="text">
+             <string>Delete</string>
+            </property>
+            <property name="default">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="Save">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
+            <property name="text">
+             <string>Save</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="1">
+         <widget class="QLabel" name="partID">
           <property name="font">
            <font>
             <pointsize>14</pointsize>
@@ -112,44 +200,12 @@ QWidget {background-color: white}
           <property name="text">
            <string/>
           </property>
-          <property name="textInteractionFlags">
-           <set>Qt::LinksAccessibleByMouse|Qt::TextEditable</set>
-          </property>
          </widget>
         </item>
-        <item row="5" column="1">
-         <widget class="QLabel" name="partBox">
-          <property name="font">
-           <font>
-            <pointsize>14</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="textInteractionFlags">
-           <set>Qt::LinksAccessibleByMouse|Qt::TextEditable</set>
-          </property>
-         </widget>
+        <item row="3" column="1">
+         <widget class="QLineEdit" name="partShelf"/>
         </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_4">
-          <property name="font">
-           <font>
-            <pointsize>12</pointsize>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>Shelf:</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0" colspan="2" alignment="Qt::AlignHCenter">
+        <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
          <widget class="QLabel" name="partImage">
           <property name="maximumSize">
            <size>
@@ -168,7 +224,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="6" column="0" colspan="2">
+        <item row="5" column="0" colspan="2">
          <widget class="QLabel" name="label">
           <property name="font">
            <font>
@@ -183,25 +239,8 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
-         <widget class="QLabel" name="label_5">
-          <property name="font">
-           <font>
-            <pointsize>12</pointsize>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>Box:</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="0">
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="label_4">
           <property name="font">
            <font>
             <pointsize>12</pointsize>
@@ -210,14 +249,14 @@ QWidget {background-color: white}
            </font>
           </property>
           <property name="text">
-           <string>ID:</string>
+           <string>Shelf:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="8" column="0" colspan="2">
+        <item row="7" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <spacer name="horizontalSpacer_6">
@@ -296,103 +335,44 @@ QWidget {background-color: white}
           </item>
          </layout>
         </item>
-        <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
-         <widget class="QLabel" name="partCategory">
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_5">
           <property name="font">
            <font>
-            <family>Noto Sans</family>
-            <pointsize>16</pointsize>
+            <pointsize>12</pointsize>
             <weight>50</weight>
-            <italic>true</italic>
             <bold>false</bold>
            </font>
           </property>
-          <property name="styleSheet">
-           <string notr="true">font: italic 16pt &quot;Noto Sans&quot;;</string>
-          </property>
           <property name="text">
-           <string>Category</string>
+           <string>Box:</string>
           </property>
-          <property name="textInteractionFlags">
-           <set>Qt::LinksAccessibleByMouse|Qt::TextEditable</set>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
-         <widget class="QLabel" name="partID">
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
           <property name="font">
            <font>
-            <pointsize>14</pointsize>
+            <pointsize>12</pointsize>
+            <weight>50</weight>
+            <bold>false</bold>
            </font>
           </property>
           <property name="text">
-           <string/>
+           <string>ID:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
-        <item row="12" column="0">
-         <widget class="QPushButton" name="Delete">
-          <property name="focusPolicy">
-           <enum>Qt::NoFocus</enum>
-          </property>
-          <property name="text">
-           <string>Delete</string>
-          </property>
-          <property name="default">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="12" column="1">
-         <widget class="QPushButton" name="Save">
-          <property name="focusPolicy">
-           <enum>Qt::NoFocus</enum>
-          </property>
-          <property name="text">
-           <string>Save</string>
-          </property>
-         </widget>
+        <item row="4" column="1">
+         <widget class="QLineEdit" name="partBox"/>
         </item>
        </layout>
-      </item>
-      <item row="0" column="0" colspan="4" alignment="Qt::AlignHCenter">
-       <widget class="QLabel" name="label_2">
-        <property name="styleSheet">
-         <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Inventory Editor</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="4">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="4" column="2">
-       <spacer name="horizontalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
       <item row="2" column="3">
        <layout class="QHBoxLayout" name="horizontalLayout">
@@ -422,19 +402,16 @@ QWidget {background-color: white}
         </item>
        </layout>
       </item>
-      <item row="3" column="3">
-       <widget class="QLabel" name="partName">
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_6">
         <property name="styleSheet">
-         <string notr="true">font: 20pt &quot;Noto Sans&quot;;</string>
+         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
         </property>
         <property name="text">
-         <string>Item Name</string>
+         <string>Category</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
-        </property>
-        <property name="textInteractionFlags">
-         <set>Qt::LinksAccessibleByMouse|Qt::TextEditable</set>
         </property>
        </widget>
       </item>
@@ -451,36 +428,7 @@ QWidget {background-color: white}
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="styleSheet">
-         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Category</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" rowspan="2">
-       <widget class="QListView" name="categoryView">
-        <property name="minimumSize">
-         <size>
-          <width>350</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::NoEditTriggers</set>
-        </property>
-        <property name="alternatingRowColors">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" rowspan="2">
+      <item row="3" column="1" rowspan="3">
        <widget class="QListView" name="itemListView">
         <property name="minimumSize">
          <size>
