--- a/inventory_editor.ui
+++ b/inventory_editor.ui
@@ -88,6 +88,28 @@ QWidget {background-color: white}
     </item>
     <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
+      <item row="3" column="1" rowspan="3">
+       <widget class="QListView" name="itemListView">
+        <property name="minimumSize">
+         <size>
+          <width>350</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
+        <property name="alternatingRowColors">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
       <item row="4" column="3">
        <widget class="QLineEdit" name="partCategory">
         <property name="alignment">
@@ -163,6 +185,63 @@ QWidget {background-color: white}
         </property>
        </widget>
       </item>
+      <item row="2" column="3">
+       <layout class="QHBoxLayout" name="horizontalLayout">
+        <item>
+         <spacer name="horizontalSpacer_8">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="new_2">
+          <property name="focusPolicy">
+           <enum>Qt::NoFocus</enum>
+          </property>
+          <property name="text">
+           <string>New</string>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>images/add.png</normaloff>images/add.png</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="styleSheet">
+         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Category</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="label_7">
+        <property name="styleSheet">
+         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
+        </property>
+        <property name="text">
+         <string>Item</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
       <item row="5" column="3">
        <layout class="QGridLayout" name="gridLayout">
         <property name="leftMargin">
@@ -177,7 +256,10 @@ QWidget {background-color: white}
         <property name="verticalSpacing">
          <number>6</number>
         </property>
-        <item row="9" column="0" colspan="2">
+        <item row="5" column="1">
+         <widget class="QLineEdit" name="rfid"/>
+        </item>
+        <item row="12" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_9">
           <item>
            <widget class="QPushButton" name="Delete">
@@ -245,7 +327,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="5" column="0" colspan="2">
+        <item row="8" column="0" colspan="2">
          <widget class="QLabel" name="label">
           <property name="font">
            <font>
@@ -277,7 +359,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="7" column="0" colspan="2">
+        <item row="10" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <spacer name="horizontalSpacer_6">
@@ -397,83 +479,18 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-       </layout>
-      </item>
-      <item row="2" column="3">
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <spacer name="horizontalSpacer_8">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-        <item>
-         <widget class="QPushButton" name="new_2">
+        <item row="5" column="0">
+         <widget class="QPushButton" name="rfidButton">
           <property name="text">
-           <string>New</string>
+           <string>RFID</string>
           </property>
           <property name="icon">
            <iconset>
-            <normaloff>images/add.png</normaloff>images/add.png</iconset>
+            <normaloff>images/rfid.png</normaloff>images/rfid.png</iconset>
           </property>
          </widget>
         </item>
        </layout>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="styleSheet">
-         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Category</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLabel" name="label_7">
-        <property name="styleSheet">
-         <string notr="true">font: 16pt &quot;Noto Sans&quot;;</string>
-        </property>
-        <property name="text">
-         <string>Item</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" rowspan="3">
-       <widget class="QListView" name="itemListView">
-        <property name="minimumSize">
-         <size>
-          <width>350</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::NoEditTriggers</set>
-        </property>
-        <property name="alternatingRowColors">
-         <bool>true</bool>
-        </property>
-       </widget>
       </item>
      </layout>
     </item>
